<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".modules.login.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_login_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_light" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_login_account"
            android:drawablePadding="13dp"
            android:hint="账户"
            android:maxLength="20"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/gray_light" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_login_pwd"
            android:drawablePadding="13dp"
            android:hint="密码"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:layout_marginTop="7dp"
            android:layout_height="50dp">
            <EditText
                android:id="@+id/login_verify"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableLeft="@drawable/ic_login_verify"
                android:drawablePadding="13dp"
                android:hint="验证码"
                android:inputType="number"
                android:maxLength="20"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_get_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sld_prmr_ccl_cn"
                android:textSize="14sp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:layout_marginRight="7dp"
                android:text="点击获取验证码"/>
        </LinearLayout>



        <View
            android:id="@+id/login_verify_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:visibility="gone"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/gray_light" />

    </LinearLayout>

    <supermarket.cn.yt.asuper.ytlibrary.widgets.ProgressButton
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/bg_sld_prmr_ccl_cn"
        app:pb_progress_height="30dp"
        app:pb_progress_width="40dp"
        app:pb_progress_text_color="@android:color/white"
        app:pb_progress_text_size="5"
        app:pb_progress_text="登\t\t录"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login_debug_ipconfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_sign_in_button"
        android:drawableLeft="@drawable/ic_settings"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="设置"
        android:textColor="@color/neutral_gray"
        android:textSize="15dp" />
</RelativeLayout>
